--- a/pages/customer/gallery.html
+++ b/pages/customer/gallery.html
@@ -126,87 +126,55 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 col-md-12 col-lg-4 mb-2">
+                        <div class="col-12 col-md-12 col-lg-6 mb-2">
                             <div class="card text-center pb-2">
                                 <div class="card-body">
                                     <h3 class="card-title">Danggit</h3>
                                     <div class="img-area mb-4 text-center"><img class="fish" alt=""
                                             src="/images/Danggit.jpg"></div>
-                                    <!-- <p class="price text-decoration-none" href=""><i class="fa-sharp fa-solid fa-peso-sign"></i>300/kg</p>
-                                <div>
-                                <a class="btn btn-success btn-sm mt-3 mx-2" href="#">Order</a>
-                                <a class="btn btn-warning btn-sm mt-3 mx-2" href="#">Reserve</a>
-                                </div> -->
+                                    <div>
+                                        <button data-bs-toggle="modal" data-bs-target="#view"
+                                            class="btn btn-info btn-sm mt-3 mx-2">View</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-md-12 col-lg-4 mb-2">
+                        <div class="col-12 col-md-12 col-lg-6 mb-2">
                             <div class="card text-center pb-2">
                                 <div class="card-body">
-                                    <h3 class="card-title">Bangus</h3>
+                                    <h3 class="card-title">Danggit</h3>
                                     <div class="img-area mb-4 text-center"><img class="fish" alt=""
-                                            src="/images/bangus.jpg"></div>
-                                    <!-- <p class="price text-decoration-none" href=""><i class="fa-sharp fa-solid fa-peso-sign"></i>350/kg</p>
-                                <div>
-                                <a class="btn btn-success btn-sm mt-3 mx-2" href="#">Order</a>
-                                <a class="btn btn-warning btn-sm mt-3 mx-2" href="#">Reserve</a>
-                                </div> -->
+                                            src="/images/Danggit.jpg"></div>
+                                    <div>
+                                        <button data-bs-toggle="modal" data-bs-target="#view"
+                                            class="btn btn-info btn-sm mt-3 mx-2">View</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-md-12 col-lg-4 mb-2">
+                        <div class="col-12 col-md-12 col-lg-6 mb-2">
                             <div class="card text-center pb-2">
                                 <div class="card-body">
-                                    <h3 class="card-title">Tulingan</h3>
+                                    <h3 class="card-title">Danggit</h3>
                                     <div class="img-area mb-4 text-center"><img class="fish" alt=""
-                                            src="/images/tulingan.jpg"></div>
-                                    <!-- <p class="price text-decoration-none" href=""><i class="fa-sharp fa-solid fa-peso-sign"></i>200/kg</p>
-                                <div>
-                                <a class="btn btn-success btn-sm mt-3 mx-2" href="#">Order</a>
-                                <a class="btn btn-warning btn-sm mt-3 mx-2" href="#">Reserve</a>
-                                </div> -->
+                                            src="/images/Danggit.jpg"></div>
+                                    <div>
+                                        <button data-bs-toggle="modal" data-bs-target="#view"
+                                            class="btn btn-info btn-sm mt-3 mx-2">View</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-md-12 col-lg-4 mb-2">
+                        <div class="col-12 col-md-12 col-lg-6 mb-2">
                             <div class="card text-center pb-2">
                                 <div class="card-body">
-                                    <h3 class="card-title">Lapu-Lapu</h3>
+                                    <h3 class="card-title">Danggit</h3>
                                     <div class="img-area mb-4 text-center"><img class="fish" alt=""
-                                            src="/images/lapu.jpg"></div>
-                                    <!-- <p class="price text-decoration-none" href=""><i class="fa-sharp fa-solid fa-peso-sign"></i>250/kg</p>
-                                <div>
-                                <a class="btn btn-success btn-sm mt-3 mx-2" href="#">Order</a>
-                                <a class="btn btn-warning btn-sm mt-3 mx-2" href="#">Reserve</a>
-                                </div> -->
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-12 col-lg-4 mb-2">
-                            <div class="card text-center pb-2">
-                                <div class="card-body">
-                                    <h3 class="card-title">Tamarong</h3>
-                                    <div class="img-area mb-4 text-center"><img class="fish" alt=""
-                                            src="/images/tamarong.jpg"></div>
-                                    <!-- <p class="price text-decoration-none" href=""><i class="fa-sharp fa-solid fa-peso-sign"></i>300/kg</p>
-                                <div>
-                                <a class="btn btn-success btn-sm mt-3 mx-2" href="#">Order</a>
-                                <a class="btn btn-warning btn-sm mt-3 mx-2" href="#">Reserve</a>
-                                </div> -->
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-12 col-lg-4 mb-2">
-                            <div class="card text-center pb-2">
-                                <div class="card-body">
-                                    <h3 class="card-title">Tamban</h3>
-                                    <div class="img-area mb-4 text-center"><img class="fish" alt=""
-                                            src="/images/tamban.jpg"></div>
-                                    <!-- <p class="price text-decoration-none" href=""><i class="fa-sharp fa-solid fa-peso-sign"></i>200/kg</p>
-                                <div>
-                                <a class="btn btn-success btn-sm mt-3 mx-2" href="#">Order</a>
-                                <a class="btn btn-warning btn-sm mt-3 mx-2" href="#">Reserve</a>
-                                </div> -->
+                                            src="/images/Danggit.jpg"></div>
+                                    <div>
+                                        <button data-bs-toggle="modal" data-bs-target="#view"
+                                            class="btn btn-info btn-sm mt-3 mx-2">View</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -214,6 +182,45 @@
                 </div>
             </section>
             <!-- End Body -->
+
+            <!-- Modal Start -->
+            <section>
+                <div class="container">
+                    <div class="modal mt-4" id="view">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content mt-4">
+                                <div class="modal-body">
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                    <div class="form-area bg-white rounded-4">
+                                        <h1 class="text-center text-info">Viewing...</h1>
+                                        <form>
+                                            <div class="mb-2 mt-4">
+                                                <input type="text" class="form-control" placeholder="Carl" readonly>
+                                            </div>
+                                            <div class="mb-2">
+                                                <input type="text" class="form-control" placeholder="Ngojo" readonly>
+                                            </div>
+                                            <div class="mb-2">
+                                                <input type="text" class="form-control" placeholder="Ibabao Cordova" readonly>
+                                            </div>
+                                            <div class="mb-2">
+                                                <label  for="">Caption:</label>
+                                                <input type="text" class="form-control" placeholder="Thankyou for Trusting CSE ^_^ " readonly>
+                                            </div>
+                                            <div class="mb-2">
+                                                <label for="">Picture</label>
+                                                    <input type="image" src="..">
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Modal End -->
         </div>
     </div>
 
