--- a/pages/customer/basket.html
+++ b/pages/customer/basket.html
@@ -116,24 +116,24 @@
             <!-- End Bottom Tab -->
 
             <!-- Start Body -->
-            <section class="purchaseList pb-5 mt-5">
+            <section class="basketList pb-5 mt-5">
                 <div class="container">
-                    <div class="purchase">
+                    <div class="basket">
                         <div class="inner-wrap row p-3">
                             <h1 class=" mb-4 text-center fw-bold mt-5">My Basket</h1>
                             <div class="col-12 col-lg-3">
                                 <div class="col mb-3">
-                                    <input type="search" class="form-control" placeholder="Search Reservation">
+                                    <input type="search" class="form-control" placeholder="Search Resere Product">
                                 </div>
                             </div>
                             <div class="col-12 col-lg-12">
                                 <table class="table table-light">
                                     <thead>
                                         <th>ID</th>
-                                        <th>NAME</th>
+                                        <th>USERNAME</th>
                                         <th>EMAIL</th>
-                                        <th>PROFILE PIC</th>
-                                        <th>ROLE</th>
+                                        <th>ADDRESS</th>
+                                        <th>DATE</th>
                                         <th>ACTION</th>
                                     </thead>
                                     <tbody>
@@ -144,37 +144,10 @@
                                             <td data-label="PROFILE PIC">asd</td>
                                             <td data-label="ROLE">Ste</td>
                                             <td data-label="ACTION">
-                                                <button data-bs-toggle="modal" data-bs-target="#myModal"
-                                                    class="btn btn-sm btn-warning mx-1">Edit</button>
-                                                <button class="btn btn-sm btn-danger">Delete</button>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                    <tbody>
-                                        <tr>
-                                            <td data-label="ID">1</td>
-                                            <td data-label="NAME">Karlo</td>
-                                            <td data-label="EMAIL">carlngujo@gmail.com</td>
-                                            <td data-label="PROFILE PIC">asd</td>
-                                            <td data-label="ROLE">Ste</td>
-                                            <td data-label="ACTION">
-                                                <button data-bs-toggle="modal" data-bs-target="#myModal"
-                                                    class="btn btn-sm btn-warning mx-1">Edit</button>
-                                                <button class="btn btn-sm btn-danger">Delete</button>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                    <tbody>
-                                        <tr>
-                                            <td data-label="ID">1</td>
-                                            <td data-label="NAME">Karlo</td>
-                                            <td data-label="EMAIL">carlngujo@gmail.com</td>
-                                            <td data-label="PROFILE PIC">asd</td>
-                                            <td data-label="ROLE">Ste</td>
-                                            <td data-label="ACTION">
-                                                <button data-bs-toggle="modal" data-bs-target="#myModal"
-                                                    class="btn btn-sm btn-warning mx-1">Edit</button>
-                                                <button class="btn btn-sm btn-danger">Delete</button>
+                                                <button data-bs-toggle="modal" data-bs-target="#basket"
+                                                    class="btn btn-sm btn-info mx-1">View</button>
+                                                <button data-bs-toggle="modal" data-bs-target="#login"
+                                                    class="btn btn-sm btn-dark">Buy Now</button>
                                             </td>
                                         </tr>
                                     </tbody>
@@ -185,6 +158,54 @@
                 </div>
             </section>
             <!-- End Body -->
+
+            <section>
+                <div class="container">
+                    <div class="modal mt-4" id="basket">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content mt-4">
+                                <div class="modal-body">
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                    <div class="form-area bg-white rounded-4">
+                                        <h1 class="text-center text-info">Review Basket</h1>
+                                        <form>
+                                            <div class="mb-2 mt-4">
+                                                <input type="text" class="form-control" placeholder="CARL" readonly>
+                                            </div>
+                                            <div class="mb-2">
+                                                <input type="text" class="form-control" placeholder="NGOJO" readonly>
+                                            </div>
+                                            <div class="mb-2">
+                                                <input type="text" class="form-control" placeholder="IBABAO CORDOVA" readonly>
+                                            </div>
+                                            <div class="mb-2">
+                                                <input type="text" class="form-control" placeholder="DANGGIT" readonly>
+                                            </div>
+                                            <div class="mb-2">
+                                                <input type="number" class="form-control" placeholder="3" readonly>
+                                            </div>
+                                            <div class="mb-2">
+                                                <input type="text" class="form-control" placeholder="5:00 min left" readonly>
+                                            </div>
+                                            <div class="mb-2">
+                                                <input type="number" class="form-control" placeholder="10-12-2023" readonly>
+                                            </div>
+                                            <button type="submit" class="mt-3"><a
+                                                class="btn-product text-decoration-none text-dark"
+                                                href="/pages/customer/home.html">Cancel Order</a></button>
+                                                <button type="submit" class="mt-3"><a
+                                                class="btn-product text-decoration-none text-dark"
+                                                href="/pages/customer/home.html">Message</a></button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Modal End -->
         </div>
     </div>
 
