--- a/pages/customer/product.html
+++ b/pages/customer/product.html
@@ -138,8 +138,10 @@
                                     <p class="price text-decoration-none"><i
                                             class="fa-sharp fa-solid fa-peso-sign"></i>300/kg</p>
                                     <div>
-                                        <a class="btn btn-success btn-sm mt-3 mx-2" href="#">Order</a>
-                                        <a class="btn btn-warning btn-sm mt-3 mx-2" href="#">Reserve</a>
+                                        <button data-bs-toggle="modal" data-bs-target="#order"
+                                            class="btn btn-success btn-sm mt-3 mx-2">Order</button>
+                                        <button data-bs-toggle="modal" data-bs-target="#reserve"
+                                            class="btn btn-warning btn-sm mt-3 mx-2">Reserve</button>
                                     </div>
                                 </div>
                             </div>
@@ -153,8 +155,10 @@
                                     <p class="price text-decoration-none"><i
                                             class="fa-sharp fa-solid fa-peso-sign"></i>350/kg</p>
                                     <div>
-                                        <a class="btn btn-success btn-sm mt-3 mx-2" href="#">Order</a>
-                                        <a class="btn btn-warning btn-sm mt-3 mx-2" href="#">Reserve</a>
+                                        <button data-bs-toggle="modal" data-bs-target="#order"
+                                            class="btn btn-success btn-sm mt-3 mx-2">Order</button>
+                                        <button data-bs-toggle="modal" data-bs-target="#reserve"
+                                            class="btn btn-warning btn-sm mt-3 mx-2">Reserve</button>
                                     </div>
                                 </div>
                             </div>
@@ -168,8 +172,10 @@
                                     <p class="price text-decoration-none"><i
                                             class="fa-sharp fa-solid fa-peso-sign"></i>200/kg</p>
                                     <div>
-                                        <a class="btn btn-success btn-sm mt-3 mx-2" href="#">Order</a>
-                                        <a class="btn btn-warning btn-sm mt-3 mx-2" href="#">Reserve</a>
+                                        <button data-bs-toggle="modal" data-bs-target="#order"
+                                            class="btn btn-success btn-sm mt-3 mx-2">Order</button>
+                                        <button data-bs-toggle="modal" data-bs-target="#reserve"
+                                            class="btn btn-warning btn-sm mt-3 mx-2">Reserve</button>
                                     </div>
                                 </div>
                             </div>
@@ -183,8 +189,10 @@
                                     <p class="price text-decoration-none"><i
                                             class="fa-sharp fa-solid fa-peso-sign"></i>250/kg</p>
                                     <div>
-                                        <a class="btn btn-success btn-sm mt-3 mx-2" href="#">Order</a>
-                                        <a class="btn btn-warning btn-sm mt-3 mx-2" href="#">Reserve</a>
+                                        <button data-bs-toggle="modal" data-bs-target="#order"
+                                            class="btn btn-success btn-sm mt-3 mx-2">Order</button>
+                                        <button data-bs-toggle="modal" data-bs-target="#reserve"
+                                            class="btn btn-warning btn-sm mt-3 mx-2">Reserve</button>
                                     </div>
                                 </div>
                             </div>
@@ -198,8 +206,10 @@
                                     <p class="price text-decoration-none"><i
                                             class="fa-sharp fa-solid fa-peso-sign"></i>300/kg</p>
                                     <div>
-                                        <a class="btn btn-success btn-sm mt-3 mx-2" href="#">Order</a>
-                                        <a class="btn btn-warning btn-sm mt-3 mx-2" href="#">Reserve</a>
+                                        <button data-bs-toggle="modal" data-bs-target="#order"
+                                            class="btn btn-success btn-sm mt-3 mx-2">Order</button>
+                                        <button data-bs-toggle="modal" data-bs-target="#reserve"
+                                            class="btn btn-warning btn-sm mt-3 mx-2">Reserve</button>
                                     </div>
                                 </div>
                             </div>
@@ -213,8 +223,10 @@
                                     <p class="price text-decoration-none"><i
                                             class="fa-sharp fa-solid fa-peso-sign"></i>200/kg</p>
                                     <div>
-                                        <a class="btn btn-success btn-sm mt-3 mx-2" href="#">Order</a>
-                                        <a class="btn btn-warning btn-sm mt-3 mx-2" href="#">Reserve</a>
+                                        <button data-bs-toggle="modal" data-bs-target="#order"
+                                            class="btn btn-success btn-sm mt-3 mx-2">Order</button>
+                                        <button data-bs-toggle="modal" data-bs-target="#reserve"
+                                            class="btn btn-warning btn-sm mt-3 mx-2">Reserve</button>
                                     </div>
                                 </div>
                             </div>
@@ -223,6 +235,99 @@
                 </div>
             </section>
             <!-- End Body -->
+            
+            <!-- Modal Start -->
+            <section>
+                <div class="container">
+                    <div class="modal mt-4" id="order">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                                <div class="modal-body">
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                    <div class="form-area bg-white rounded-4">
+                                        <h1 class="text-center">Buy Product</h1>
+                                        <form>
+                                            <div class="mb-2 mt-4">
+                                                <input type="image">
+                                            </div>
+                                            <div class="mb-2">
+                                                <input type="text" class="form-control" placeholder="Product Name" readonly>
+                                            </div>
+                                            <div class="mb-2">
+                                                <input type="text" class="form-control" placeholder="How many Kg?">
+                                            </div>
+                                            <div class="mb-2">
+                                                <input type="text" class="form-control"
+                                                    placeholder="Enter a active cp number">
+                                            </div>
+                                            <div class="mb-2">
+                                                <label for="exampleInputPassword1" class="form-label">If Gcash or
+                                                    Paymaya
+                                                    (Kindy send the reciept)</label>
+                                                <select name="" id="">
+                                                    <option value="">Gcash</option>
+                                                    <option value="">Paymaya</option>
+                                                </select>
+                                                <div class="mb-2">
+                                                    <input type="file" name="Uploadfile">
+                                                    <input type="image" src="submit.jpg" alt="Add">
+                                                </div>
+                                            </div>
+                                            <button type="submit" class="mt-3"><a
+                                                    class="btn-product text-decoration-none text-dark"
+                                                    href="/pages/customer/home.html">Place Order</a></button>
+                                            <button type="submit" class="mt-3"><a
+                                                    class="btn-product text-decoration-none text-dark"
+                                                    href="/pages/customer/home.html">Message</a></button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section>
+                <div class="container">
+                    <div class="modal mt-4" id="reserve">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content mt-4">
+                                <div class="modal-body">
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                    <div class="form-area bg-white rounded-4">
+                                        <h1 class="text-center">Reserve Product</h1>
+                                        <form>
+                                            <div class="mb-2 mt-4">
+                                                <input type="image">
+                                            </div>
+                                            <div class="mb-2">
+                                                <input type="text" class="form-control" placeholder="Product Name" readonly>
+                                            </div>
+                                            <div class="mb-2">
+                                                <input type="text" class="form-control" placeholder="How many Kg?">
+                                            </div>
+                                            <div class="mb-2">
+                                                <input type="text" class="form-control"
+                                                    placeholder="Enter a active cp number">
+                                            </div>
+                                            <button type="submit" class="mt-3"><a
+                                                    class="btn-product text-decoration-none text-dark"
+                                                    href="/pages/customer/home.html">Reserve</a></button>
+                                            <button type="submit" class="mt-3"><a
+                                                    class="btn-product text-decoration-none text-dark"
+                                                    href="/pages/customer/home.html">Message</a></button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Modal End -->
         </div>
     </div>
 
@@ -230,6 +335,23 @@
     <script src="/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="/js/sweetalert.js"></script>
+    <!-- <script>
+        $("#order").click(function() {
+            var InfoComplete = $("InfoComplete").val();
+            
+            if(InfoComplete == '') {
+                swal({
+                title: "Incomplete",
+                text: "Please complete your Information",
+                icon: "warning",
+                button: "Okay",
+                }); 
+            }else {
+                redirect('Order Modal')
+            }
+        });
+    </script> -->
     <!-- End Bootstrap -->
 </body>
 
