--- a/pages/customer/purchase.html
+++ b/pages/customer/purchase.html
@@ -130,10 +130,10 @@
                                 <table class="table table-light">
                                     <thead>
                                         <th>ID</th>
-                                        <th>NAME</th>
+                                        <th>USERNAME</th>
                                         <th>EMAIL</th>
-                                        <th>PROFILE PIC</th>
-                                        <th>ROLE</th>
+                                        <th>ADDRESS</th>
+                                        <th>DATE</th>
                                         <th>ACTION</th>
                                     </thead>
                                     <tbody>
@@ -144,9 +144,10 @@
                                             <td data-label="PROFILE PIC">asd</td>
                                             <td data-label="ROLE">Ste</td>
                                             <td data-label="ACTION">
-                                                <button data-bs-toggle="modal" data-bs-target="#myModal"
-                                                    class="btn btn-sm btn-warning mx-1">Edit</button>
-                                                <button class="btn btn-sm btn-danger">Delete</button>
+                                                <button data-bs-toggle="modal" data-bs-target="#edit"
+                                                    class="btn btn-sm btn-info mx-1">View</button>
+                                                <button data-bs-toggle="modal" data-bs-target="#login"
+                                                    class="btn btn-sm btn-dark">Add More</button>
                                             </td>
                                         </tr>
                                     </tbody>
@@ -158,23 +159,10 @@
                                             <td data-label="PROFILE PIC">asd</td>
                                             <td data-label="ROLE">Ste</td>
                                             <td data-label="ACTION">
-                                                <button data-bs-toggle="modal" data-bs-target="#myModal"
-                                                    class="btn btn-sm btn-warning mx-1">Edit</button>
-                                                <button class="btn btn-sm btn-danger">Delete</button>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                    <tbody>
-                                        <tr>
-                                            <td data-label="ID">1</td>
-                                            <td data-label="NAME">Karlo</td>
-                                            <td data-label="EMAIL">carlngujo@gmail.com</td>
-                                            <td data-label="PROFILE PIC">asd</td>
-                                            <td data-label="ROLE">Ste</td>
-                                            <td data-label="ACTION">
-                                                <button data-bs-toggle="modal" data-bs-target="#myModal"
-                                                    class="btn btn-sm btn-warning mx-1">Edit</button>
-                                                <button class="btn btn-sm btn-danger">Delete</button>
+                                                <button data-bs-toggle="modal" data-bs-target="#edit"
+                                                    class="btn btn-sm btn-info mx-1">View</button>
+                                                <button data-bs-toggle="modal" data-bs-target="#login"
+                                                    class="btn btn-sm btn-dark">Add More</button>
                                             </td>
                                         </tr>
                                     </tbody>
@@ -185,6 +173,58 @@
                 </div>
             </section>
             <!-- End Body -->
+
+            <!-- Modal Start -->
+            <section>
+                <div class="container">
+                    <div class="modal mt-4" id="edit">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content mt-4">
+                                <div class="modal-body">
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                    <div class="form-area bg-white rounded-4">
+                                        <h1 class="text-center text-warning">Review Order</h1>
+                                        <form>
+                                            <div class="mb-2 mt-4">
+                                                <input type="text" class="form-control" placeholder="CARL" readonly>
+                                            </div>
+                                            <div class="mb-2">
+                                                <input type="text" class="form-control" placeholder="NGOJO" readonly>
+                                            </div>
+                                            <div class="mb-2">
+                                                <input type="text" class="form-control" placeholder="IBABAO CORDOVA" readonly>
+                                            </div>
+                                            <div class="mb-2">
+                                                <input type="text" class="form-control" placeholder="DANGGIT" readonly>
+                                            </div>
+                                            <div class="mb-2">
+                                                <input type="number" class="form-control" placeholder="3" readonly>
+                                            </div>
+                                            <div class="mb-2">
+                                                <input type="text" class="form-control" placeholder="GCASH" readonly>
+                                            </div>
+                                            <div class="mb-2">
+                                                <input type="text" class="form-control" placeholder="COMPLETED" readonly>
+                                            </div>
+                                            <div class="mb-2">
+                                                <input type="number" class="form-control" placeholder="10-12-2023" readonly>
+                                            </div>
+                                            <button type="submit" class="mt-3"><a
+                                                class="btn-product text-decoration-none text-dark"
+                                                href="/pages/customer/home.html">Cancel Order</a></button>
+                                                <button type="submit" class="mt-3"><a
+                                                class="btn-product text-decoration-none text-dark"
+                                                href="/pages/customer/home.html">Message</a></button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Modal End -->
         </div>
     </div>
 
